unpackaged/main/default/objects/Brand__c/Brand__c.object-meta.xml
<CustomObject>
    <description>Used for Branding</description>
    <label>Brand</label>
    <nameField>
        <label>Brand Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brand</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>