unpackaged/main/default/objects/Brand__c/fields/Letterhead__c.field-meta.xml
<CustomField>
    <fullName>Letterhead__c</fullName>
    <description>URL to the Static Resource that has the Letterhead Image</description>
    <label>Letterhead</label>
    <type>Url</type>
</CustomField>