unpackaged/main/default/objects/Brand__c/fields/Logo__c.field-meta.xml
<CustomField>
    <fullName>Logo__c</fullName>
    <description>This is the URL to the static resource in salesforce that has the logo.</description>
    <label>Logo</label>
    <type>Url</type>
</CustomField>