unpackaged/main/default/objects/Brand__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Brand_Code__c</columns>
    <columns>Letterhead__c</columns>
    <columns>Logo__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>